# RegistrAI

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  run.bash
contracts/: .env.example  README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: KYAScoreVerifier.sol
contracts/test/: KYAScoreVerifier.t.sol
kya-agent-client/: Cargo.toml
kya-agent-client/src/: contract.rs  lib.rs  service.rs  state.rs
kya-oracle-bridge/: Cargo.toml
kya-oracle-bridge/src/: contract.rs  lib.rs  service.rs  state.rs
kya-registry/: Cargo.toml
kya-registry/src/: contract.rs  lib.rs  service.rs  state.rs  tests.rs
server/: .env.example  package-lock.json  package.json
server/src/: auth.ts  db.ts  index.ts  linera.ts  types.ts
server/src/routes/: agents.test.ts  agents.ts
web/: index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vitest.config.ts
web/src/: App.tsx  index.css
web/src/components/: AgentGauge.tsx  Background.tsx  FeaturesGrid.tsx  Footer.tsx  HeroSection.tsx  Navbar.tsx  SpotlightCard.tsx  WaitlistForm.tsx
web/src/contexts/: AuthContext.tsx
web/src/graphql/: client.ts
web/src/pages/: AgentListPage.tsx  DashboardPage.tsx  DocsPage.test.tsx  DocsPage.tsx  LandingPage.tsx  ProfilePage.test.tsx  ProfilePage.tsx  RegisterPage.tsx
web/src/utils/: api.ts
